Updating the page details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Hello! My name is Mauricio and I want to become a web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born in Nicaragua and spend a significant portion of my childhood there.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I like to make electronic music, doodle, and play video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I would love to work as a lead web developer and help design cool and unique websites for my clients.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>South St. Paul, MN</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love the process of planning and completing projects, and I'm also passionate about computers and the internet.</p>
     </section>
 
     <footer id="footer">
